# centauro_cartesio

./: .gitignore  CMakeLists.txt  README.md  package.xml
cmake/: ExportProject.cmake  centauro_cartesioConfig.cmake.in
configs/: centauro_acceleration.yaml  centauro_car_model_stack.yaml  centauro_collision_avoidance_stack.yaml  centauro_com_control.yaml  centauro_force_distribution.yaml  centauro_postural_wheeled.yaml  centauro_simple_stack.yaml  centauro_trunk_control.yaml  collision_avoidance_stack.yaml
configs/rviz/: centauro_collision.rviz  centauro_force.rviz  centauro_force_distribution.rviz  centauro_wheeled.rviz
configs/srdf/: centauro_car.srdf
configs/urdf/: centauro_car.urdf
include/centauro_cartesio/: centauro_ankle_steering.h  omnisteering_controller.h
launch/: centauro.launch  centauro_acceleration.launch  centauro_car_model.launch  centauro_collision_avoidance.launch  centauro_force_distribution.launch  centauro_force_estimation.launch  centauro_omnisteering_controller.launch  centauro_postural_wheeled.launch
python/: CMakeLists.txt  simple_steering.cpp  virtual_frame_adaptation.py  virtual_frame_test.py  wheeled_motion.ipynb
src/: CentauroAnkleSteering.cpp  cartesio_addon.cpp  centauro_ankle_steering.cpp  centauro_gcomp.cpp  centauro_gcomp.h  omnisteering_controller.cpp  omnisteering_controller_node.cpp  omnisteering_controller_plugin.cpp  poses2-wheels.py  poses2.py  poses2_collision_avoidance_stack.yaml  poses2_ik.yaml  poses2_ik_basic.yaml  ride_centauro.py
srv/: SetNormal.srv
